# python-pyfugue

./: .cruft.json  .gitignore  .pre-commit-config.yaml  404.html  README.md  index.html  mkdocs.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: BUG_REPORT.md
.github/workflows/: ci.yml  codeql-analysis.yml
CHANGELOG/: index.html
CODE_OF_CONDUCT/: index.html
CONTRIBUTING/: index.html
LICENSE/: index.html
api/pyfugue/: index.html
api/pyfugue.application/: index.html
api/pyfugue.main/: index.html
api/pyfugue.session/: index.html
api/pyfugue.ui/: index.html
api/pyfugue.ui.interface/: index.html
api/pyfugue.ui.urwid/: index.html
api/pyfugue.ui.urwid.controller/: index.html
api/pyfugue.ui.urwid.session/: index.html
api/source/pyfugue/: index.html
api/source/pyfugue.application/: index.html
api/source/pyfugue.main/: index.html
api/source/pyfugue.session/: index.html
api/source/pyfugue.ui/: index.html
api/source/pyfugue.ui.interface/: index.html
api/source/pyfugue.ui.urwid/: index.html
api/source/pyfugue.ui.urwid.controller/: index.html
api/source/pyfugue.ui.urwid.session/: index.html
dev/: mkdocs.py  os_version.py
docs/: CONTRIBUTING.md
search/: search_index.json
src/pyfugue/: __about__.py  __init__.py  __main__.py  _version.py  application.py  main.py  session.py
src/pyfugue/contrib/: messaging.py
src/pyfugue/ui/: __init__.py  interface.py
src/pyfugue/ui/urwid/: __init__.py  controller.py  session.py
tests/: __init__.py  test_about.py  test_main.py  test_messaging.py
