[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 88

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
version_files = [
    "pyproject.toml:version"
]
tag_format = "v$version"

[tool.flakehell]
exclude = []
format = "grouped"
max_line_length = 88
show_source = true

[tool.flakehell.exceptions."*/__init__.py"]
pyflakes = ["-F401"]

[tool.flakehell.exceptions."tests/"]
flake8-docstrings = ["-D1??"]
flake8-darglint = ["-DAR*", "+D0??"]
flake8-bandit = ["-S101"]

[tool.flakehell.plugins]
dlint = ["+*"]
flake8-alfred = ["+*"]
flake8-bandit = ["+*"]
flake8-black = ["+*"]
flake8-bugbear = ["+*"]
flake8-builtins = ["+*"]
flake8-comprehensions = ["+*"]
flake8-docstrings = ["+*", "-D412"]
flake8-logging-format = ["+*"]
flake8-pytest-style = ["+*"]
flake8-typing-imports = ["+*"]
flake8-use-fstring-format = ["+*"]
flake8-use-fstring-percent = ["+*"]
flake8-use-fstring-prefix = ["+*"]
mccabe = ["+*"]
pep8-naming = ["+*"]
pycodestyle = ["+*"]
pyflakes = ["+*"]
pylint = ["+*", "-C0103", "-C0114", "-C0115", "-C0116", "-E0401"]

[tool.isort]
line_length = 88
multi_line_output = 3
balanced_wrapping = true
atomic = true
lines_after_imports = 2
lines_between_types = 1
combine_star = true
include_trailing_comma = true
use_parentheses = true
known_first_party = "pyfugue"
known_third_party = []

[tool.poetry]
authors = ["NimVek <NimVek@users.noreply.github.com>"]
classifiers = [
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Natural Language :: English",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Development Status :: 3 - Alpha",
]
description = "A Mud client based on python."
license = "GPL-3.0-or-later"
name = "pyfugue"
readme = "README.md"
repository = "https://github.com/NimVek/python-pyfugue"
version = "0.1.0"

[tool.poetry.dependencies]
incremental = "^17.5.0"
python = "^3.8"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
commitizen = "*"
darglint = "*"
dlint = "*"
flake8 = "*"
flake8-alfred = "*"
flake8-bandit = "*"
flake8-black = "*"
flake8-bugbear = "*"
flake8-builtins = "*"
flake8-comprehensions = "*"
flake8-docstrings = "*"
flake8-logging-format = "*"
flake8-markdown = "*"
flake8-pytest-style = "*"
flake8-typing-imports = "*"
flake8-use-fstring = "*"
flakehell = "*"
ipython = "*"
mkapi = "*"
mkdocs = "*"
mkdocs-material = "*"
mkdocs-simple-hooks = "*"
mypy = "*"
pre-commit = "*"
pytest = "*"
pytest-cov = "*"
pytest-randomly = "*"
toml-sort = "*"

[tool.poetry.scripts]
pyfugue = 'pyfugue.main:main'
