[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 90

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
version_files = [
    "pyproject.toml:version"
]
tag_format = "v$version"

[tool.flakehell]
exclude = []
format = "grouped"
max_line_length = 90
show_source = true

[tool.flakehell.exceptions."*/__init__.py"]
pyflakes = ["-F401"]

[tool.flakehell.exceptions."tests/"]
flake8-docstrings = ["-D1??"]
flake8-darglint = ["-DAR*", "+D0??"]
flake8-bandit = ["-S101"]
pylint = ["-E0611"]

[tool.flakehell.plugins]
dlint = ["+*"]
flake8-alfred = ["+*"]
flake8-bandit = ["+*"]
flake8-bugbear = ["+*"]
flake8-builtins = ["+*"]
flake8-comprehensions = ["+*"]
flake8-darglint = ["+*"]
flake8-docstrings = ["+*", "-D401", "-D412"]
flake8-logging-format = ["+*"]
flake8-pytest-style = ["+*"]
flake8-typing-imports = ["+*"]
flake8-use-fstring-format = ["+*"]
flake8-use-fstring-percent = ["+*"]
flake8-use-fstring-prefix = ["+*"]
mccabe = ["+*"]
pep8-naming = ["+*"]
pycodestyle = ["+*"]
pyflakes = ["+*"]
pylint = ["+*", "-C0103", "-C0114", "-C0115", "-C0116", "-E0401"]

[tool.isort]
line_length = 90
multi_line_output = 3
balanced_wrapping = true
atomic = true
lines_after_imports = 2
lines_between_types = 1
combine_star = true
include_trailing_comma = true
use_parentheses = true
known_first_party = "pyfugue"
known_third_party = []

[tool.poetry]
authors = ["NimVek <NimVek@users.noreply.github.com>"]
classifiers = [
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Natural Language :: English",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Development Status :: 3 - Alpha",
]
description = "A Mud client based on python."
license = "GPL-3.0-or-later"
name = "pyfugue"
readme = "README.md"
repository = "https://github.com/NimVek/python-pyfugue"
version = "0.1.0"

[tool.poetry.dependencies]
incremental = "^17.5.0"
python = "^3.8"
twisted = "^20.3.0"
urwid = { version = "^2.1.1", optional = true }
sortedcontainers = "^2.2.2"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
commitizen = "^2.0.0"
darglint = "^1.5.1"
dlint = "^0.10.3"
flake8 = "^3.8.3"
flake8-alfred = "^1.1.1"
flake8-bandit = "^2.1.2"
flake8-bugbear = "^20.1.4"
flake8-builtins = "^1.5.3"
flake8-comprehensions = "^3.2.3"
flake8-docstrings = "^1.5.0"
flake8-logging-format = "^0.6.0"
flake8-markdown = "^0.2.0"
flake8-pytest-style = "^1.2.1"
flake8-typing-imports = "^1.9.0"
flake8-use-fstring = "^1.1"
flakehell = "^0.6.0"
ipython = "^7.16.1"
mkapi = "^1.0.11"
mkdocs = "^1.1.2"
mkdocs-material = "^8.2.6"
mkdocs-simple-hooks = "^0.1.1"
mypy = "^0.800"
pre-commit = "^2.6.0"
pytest = "^6.0.1"
pytest-cov = "^2.10.0"
pytest-randomly = "^3.4.1"
pytest-xdist = "^2.0.0"
toml-sort = "^0.18.0"

[tool.poetry.extras]
tui = [ "urwid" ]

[tool.poetry.scripts]
pyfugue = 'pyfugue.main:main'
